--- a/oldtests/CMakeLists.txt
+++ b/oldtests/CMakeLists.txt
@@ -3,11 +3,14 @@
 add_executable(test_egm test_egm.cpp)
 target_link_libraries(test_egm rocket)
 
-add_executable(test_jpl test_jpl.cpp)
-target_link_libraries(test_jpl rocket)
+add_executable(test_srp test_srp.cpp)
+target_link_libraries(test_srp rocket)
 
 add_executable(test_sp3 test_sp3.cpp)
 target_link_libraries(test_sp3 rocket)
 
 add_executable(test_iers test_iers.cpp)
 target_link_libraries(test_iers rocket)
+
+add_executable(test_de test_de.cpp)
+target_link_libraries(test_de rocket)
