--- a/oldtests/CMakeLists.txt
+++ b/oldtests/CMakeLists.txt
@@ -14,3 +14,6 @@ target_link_libraries(test_iers rocket)
 
 add_executable(test_de test_de.cpp)
 target_link_libraries(test_de rocket)
+
+add_executable(test_eop test_eop.cpp)
+target_link_libraries(test_eop rocket)
