--- a/workplace/orbitsim.conf
+++ b/workplace/orbitsim.conf
@@ -1,7 +1,12 @@
-IERSEOPFile =  finals2000A.all
-IERSLSFile  =  Leap_Second_History.dat
+# This is an example of configuration file for orbit simulation.
+# The result is writted into orbit_example.txt
 
-EGM08File   =  EGM2008_SMALL.
+# NOTE: the file directories are all relative to home/build/apps/orbit/
+
+IERSEOPFile =  ../../../rocket/tables/finals2000A.all
+IERSLSFile  =  ../../../rocket/tables/Leap_Second_History.dat
+
+EGM08File   =  ../../../rocket/tables/EGM2008_SMALL.
 EGM_Degree  =  20
 EGM_Order   =  20
 
@@ -25,7 +30,9 @@ Vz          =  -3116.619482
 Stepsize    =  10.0
 
 # Integrator length, unit: hour
-Length      =  24.0
+Length      =  1.0
 
 # Output file
-Outfile     = orbit.sim
+# The data formats are as follows:
+#  UTC   Rx    Ry    Rz    Vx    Vy    Vz
+Outfile     = ../../../rocket/workplace/orbit_example.txt
