--- a/workplace/orbit/orbitsim.conf
+++ b/workplace/orbit/orbitsim.conf
@@ -3,7 +3,7 @@
 
 # NOTE: the file directories are all relative to home/build/apps/orbit/
 
-IERSEOPFile =  ../../../ROCEKT/tables/finals2000A.all
+IERSEOPFile =  ../../../ROCKET/tables/finals2000A.all
 IERSLSFile  =  ../../../ROCKET/tables/Leap_Second_History.dat
 
 EGM08File   =  ../../../ROCKET/tables/EGM2008_SMALL.
@@ -35,4 +35,5 @@ Length      =  1.0
 # Output file
 # The data formats are as follows:
 #  UTC   Rx    Ry    Rz    Vx    Vy    Vz
-Outfile     = ../../../ROCKET/workplace/orbit_example.txt
+OutFile_ECEF   = ../../../ROCKET/workplace/orbit/orbit_example.ecef
+OutFile_ECI    = ../../../ROCKET/workplace/orbit/orbit_example.eci
