--- a/oldtests/CMakeLists.txt
+++ b/oldtests/CMakeLists.txt
@@ -11,7 +11,6 @@ target_link_libraries(test_sp3 rocket)
 
 add_executable(test_iers test_iers.cpp)
 target_link_libraries(test_iers rocket)
-install (TARGETS test_iers DESTINATION bin)
 
 add_executable(test_de405 test_de405.cpp)
 target_link_libraries(test_de405 rocket)
@@ -21,5 +20,11 @@ target_link_libraries(test_integrator rocket)
 
 add_executable(test_oi test_oi.cpp)
 target_link_libraries(test_oi rocket)
+
+add_executable(test_inp test_inp.cpp)
+target_link_libraries(test_inp rocket)
+
+add_executable(test_jpl test_jpl.cpp)
+target_link_libraries(test_jpl rocket)
 
 
