--- a/workplace/orbit/orbitsim.conf
+++ b/workplace/orbit/orbitsim.conf
@@ -3,10 +3,10 @@
 
 # NOTE: the file directories are all relative to home/build/apps/orbit/
 
-IERSEOPFile =  ../../../ROCKET/tables/finals2000A.all
-IERSLSFile  =  ../../../ROCKET/tables/Leap_Second_History.dat
+IERSEOPFile =  ./finals2000A.all
+IERSLSFile  =  ./Leap_Second_History.dat
 
-EGM08File   =  ../../../ROCKET/tables/EGM2008_SMALL.
+EGM08File   =  ./EGM2008_SMALL.
 EGM_Degree  =  20
 EGM_Order   =  20
 
@@ -35,5 +35,5 @@ Length      =  1.0
 # Output file
 # The data formats are as follows:
 #  UTC   Rx    Ry    Rz    Vx    Vy    Vz
-OutFile_ECEF   = ../../../ROCKET/workplace/orbit/orbit_example.ecef
-OutFile_ECI    = ../../../ROCKET/workplace/orbit/orbit_example.eci
+OutFile_ECEF   = ./orbit_example.ecef
+OutFile_ECI    = ./orbit_example.eci
