substitute IERSConventions with ReferenceSystem in MoonGravitation and SunGravitation

--- a/oldtests/CMakeLists.txt
+++ b/oldtests/CMakeLists.txt
@@ -27,4 +27,6 @@ target_link_libraries(test_inp rocket)
 add_executable(test_jpl test_jpl.cpp)
 target_link_libraries(test_jpl rocket)
 
+add_executable(test_thirdbody test_thirdbody.cpp)
+target_link_libraries(test_thirdbody rocket)
 
