modify the calling method of clk program

--- a/workplace/clk/clk.conf
+++ b/workplace/clk/clk.conf
@@ -10,28 +10,10 @@
 # Shoujian Zhang, Wuhan University, 2016
 #
 # Furture plan:
-# 
-# (1) the initial time should be provided by the command line
-# (2) the initial time should be provided by the command line
+#
+# (1) The clock datum should be checked.
 #
 #=================================================================
-
-############################################
-# Clock datum choice
-############################################
-
-# In the clock estimation, the clock datum must be given. 
-# 1. if a four-character station name is given, the receiver clock of this station will
-#    be fixed as zero.
-# 2. if 'meanzero' is given, it means the mean of all the satellites will be fixed 
-#    as zero.
-#
-masterStation      = ONSA 
-
-# Inital Time 
-year               = 2011
-dayOfYear          = 200
-secOfDay           = 0.0
 
 #
 # Default files
@@ -39,6 +21,14 @@ secOfDay           = 0.0
 oceanLoadingFile   = ../../tables/OCEAN-GOT00.dat # file with ocean loading parameters
 antexFile          = ../../tables/igs08.atx       # Name of Antex file (absolute PC)
 recTypeFile        = ../../tables/recType.list    # bernese receiver type file 
+
+# clock/upd datum station
+masterStation      = ONSA 
+
+# Inital Time 
+year               = 2011
+dayOfYear          = 200
+secOfDay           = 0.0
 
 ########################################
 # Data preprocessing
@@ -66,9 +56,20 @@ useAzim            = TRUE            # elevation/azimuth patterns or just elevat
 ############################################
 # Parameters for kalman filter
 ############################################
+
 #
+USENEU             = TRUE            # results will be given in dLat, dLon, dH
 coordAsWhiteNoise  = false           # FALSE means 'Static positioning'
 filterCycles       = 0               # an integer < 1 means forwards processing only
+
+############################################
+# Ambiguity Resolution parameters
+############################################
+#
+#
+############################################
+# Force models for GPS/BDS/GALILEO/GLONASS systems
+############################################
 
 # 
 ############################################
@@ -76,7 +77,6 @@ filterCycles       = 0               # an integer < 1 means forwards processing 
 ############################################
 #
 precision          = 4               # number of decimal places in output file
-USENEU             = TRUE            # results will be given in dLat, dLon, dH
 printModel         = false           # By default, we won't print the model.
 
 # End of configuration file
