--- a/oldtests/test.conf
+++ b/oldtests/test.conf
@@ -1,13 +1,17 @@
 # The file directories should be relative to ~/build/oldtests/
 
-IERSEOPFile = ../../ROCKET/tables/finals2000A.all
-IERSLSFile  = ../../ROCKET/tables/Leap_Second_History.dat
-JPLEPHFile  = ../../ROCKET/tables/1980_2040.405
-SatDataFile = ../../ROCKET/tables/SatInfo.txt
+IERSEOPFILE = ../../ROCKET/tables/finals2000A.all
+IERSLSFILE  = ../../ROCKET/tables/Leap_Second_History.dat
+JPLEPHFILE  = ../../ROCKET/tables/1980_2040.405
+SATDATAFILE = ../../ROCKET/tables/SatInfo.txt
 
-EGMDegree   = 12
-EGMOrder    = 12
-EGMFile     = ../../ROCKET/tables/egm08_200.txt
+EGMDEG      = 12
+EGMORD      = 12
+EGMFILE     = ../../ROCKET/tables/egm08_200.txt
 
-IGSSP3List = ../../ROCKET/workplace/sp3/igs18253.sp3 ../../ROCKET/workplace/sp3/igs18254.sp3 ../../ROCKET/workplace/sp3/igs18255.sp3
+EOTDEG      = 8
+EOTORD      = 8
+EOTFILE     = ../../ROCKET/tables/fes2004_Cnm-Snm.dat
+
+IGSSP3LIST  = ../../ROCKET/workplace/sp3/igs18253.sp3 ../../ROCKET/workplace/sp3/igs18254.sp3 ../../ROCKET/workplace/sp3/igs18255.sp3
 
