--- a/workplace/clk/clk.conf
+++ b/workplace/clk/clk.conf
@@ -18,16 +18,16 @@
 #
 # Default files
 #
-oceanLoadingFile   = ../../tables/OCEAN-GOT00.dat # file with ocean loading parameters
-antexFile          = ../../tables/igs08.atx       # Name of Antex file (absolute PC)
-recTypeFile        = ../../tables/recType.list    # bernese receiver type file 
+oceanLoadingFile   = ../../tables/OCEAN-GOT00.dat      # file with ocean loading parameters
+antexFile          = ../../tables/igs08.atx            # Name of Antex file (absolute PC)
+recTypeFile        = ../../tables/receiver_bernese.lis # bernese receiver type file 
 
 # clock/upd datum station
 masterStation      = ONSA 
 
 # Inital Time 
 year               = 2011
-dayOfYear          = 200
+dayOfYear          = 274
 secOfDay           = 0.0
 
 ########################################
