separated force model parameters from spacecraft and fixed some bugs in force models

--- a/oldtests/test.conf
+++ b/oldtests/test.conf
@@ -9,9 +9,14 @@ EGMDEG      = 12
 EGMORD      = 12
 EGMFILE     = ../../ROCKET/tables/egm08_200.txt
 
+SOLIDTIDE   = true
+
+OCEANTIDE   = true
 EOTDEG      = 8
 EOTORD      = 8
 EOTFILE     = ../../ROCKET/tables/fes2004_Cnm-Snm.dat
+
+POLETIDE    = true
 
 IGSSP3LIST  = ../../ROCKET/workplace/sp3/igs18253.sp3 ../../ROCKET/workplace/sp3/igs18254.sp3 ../../ROCKET/workplace/sp3/igs18255.sp3
 
