re-checked the earth tide corrections

--- a/oldtests/test.conf
+++ b/oldtests/test.conf
@@ -15,6 +15,7 @@ OCEANTIDE   = true
 EOTDEG      = 8
 EOTORD      = 8
 EOTFILE     = ../../ROCKET/tables/fes2004_Cnm-Snm.dat
+#EOTFILE     = ../../ROCKET/tables/OT_CSRC.TID
 
 POLETIDE    = true
 
