updated EOPDataStore and ReferenceSystem etc

--- a/oldtests/test.conf
+++ b/oldtests/test.conf
@@ -1,6 +1,7 @@
 # The file directories should be relative to ~/build/oldtests/
 
 IERSEOPFILE = ../../ROCKET/tables/finals2000A.all
+STKEOPFILE  = ../../ROCKET/tables/eop20110101.txt
 IERSLSFILE  = ../../ROCKET/tables/Leap_Second_History.dat
 JPLEPHFILE  = ../../ROCKET/tables/1980_2040.405
 SATDATAFILE = ../../ROCKET/tables/SatInfo.txt
@@ -9,15 +10,16 @@ EGMDEG      = 12
 EGMORD      = 12
 EGMFILE     = ../../ROCKET/tables/egm08_200.txt
 
-SOLIDTIDE   = true
+SOLIDTIDE   = TRUE
 
-OCEANTIDE   = true
+OCEANTIDE   = TRUE
 EOTDEG      = 8
 EOTORD      = 8
 EOTFILE     = ../../ROCKET/tables/fes2004_Cnm-Snm.dat
-#EOTFILE     = ../../ROCKET/tables/OT_CSRC.TID
 
-POLETIDE    = true
+POLETIDE    = TRUE
 
 IGSSP3LIST  = ../../ROCKET/workplace/sp3/igs18253.sp3 ../../ROCKET/workplace/sp3/igs18254.sp3 ../../ROCKET/workplace/sp3/igs18255.sp3
 
+STEPSIZE    = 75.0
+LENGTH      = 24.0
