added kepler orbit elements in Spacecraft and replaced SunGravitation and MoonGravitation with ThirdBody

--- a/oldtests/test.conf
+++ b/oldtests/test.conf
@@ -50,7 +50,7 @@ POLETIDE    = TRUE
 
 # SP3 File
 # 2014/02/01
-IGSSP3LIST  = ../../ROCKET/workplace/sp3/igs17775.sp3 ../../ROCKET/workplace/sp3/igs17776.sp3 ../../ROCKET/workplace/sp3/igs17780.sp3 ../../ROCKET/workplace/sp3/igs17781.sp3 ../../ROCKET/workplace/sp3/igs17782.sp3 ../../ROCKET/workplace/sp3/igs17783.sp3
+IGSSP3LIST  = ../../ROCKET/workplace/sp3/igs17775.sp3 ../../ROCKET/workplace/sp3/igs17776.sp3 ../../ROCKET/workplace/sp3/igs17780.sp3
 
 # 2014/02/04
 #IGSSP3LIST  = ../../ROCKET/workplace/sp3/igs17781.sp3 ../../ROCKET/workplace/sp3/igs17782.sp3 ../../ROCKET/workplace/sp3/igs17783.sp3
