--- a/oldtests/CMakeLists.txt
+++ b/oldtests/CMakeLists.txt
@@ -36,6 +36,9 @@ target_link_libraries(test_legendre rocket)
 add_executable(test_tides test_tides.cpp)
 target_link_libraries(test_tides rocket)
 
+add_executable(test_relativity test_relativity.cpp)
+target_link_libraries(test_relativity rocket)
+
 add_executable(test_gds_serialize test_gds_serialize.cpp)
 target_link_libraries(test_gds_serialize rocket)
 
