update orbit related classes and tests

--- a/oldtests/test.conf
+++ b/oldtests/test.conf
@@ -1,15 +1,42 @@
-# The file directories should be relative to ~/build/oldtests/
+# configuration file for oldtests
 
-# Global File
+
+### START OF DEFAULT SECTION ###
+
+## Global Files
 IERSEOPFILE = ../../ROCKET/tables/finals2000A.all
-STKEOPFILE  = ../../ROCKET/tables/eop20110101.txt
+STKEOPFILE = ../../ROCKET/tables/eop19620101.txt
 IERSLSFILE  = ../../ROCKET/tables/Leap_Second_History.dat
-JPLEPHFILE  = ../../ROCKET/tables/1980_2040.405
-SATDATAFILE = ../../ROCKET/tables/SatInfo.txt
+JPLEPHFILE  = ../../ROCKET/tables/1980_2040.DE405
+SATDATAFILE = ../../ROCKET/tables/SatInfo.dat
 
-# SRP
-SRP_NUM     = 9
-D0          = 1.0
+## Initial Time
+YEAR        = 2015
+MON         = 1
+DAY         = 1
+HOUR        = 12
+MIN         = 0
+SEC         = 0.0
+TIMESYS     = GPS
+
+## Sat PRN and System
+SATPRN      = 1
+SATSYS      = G
+
+
+## Initial Position in ICRS, unit: m
+DRX0         = 0.0
+DRY0         = 0.0
+DRZ0         = 0.0
+
+## Initial Velocity in ICRS, unit: m/s
+DVX0         = 0.0
+DVY0         = 0.0
+DVZ0         = 0.0
+
+## Initial SRP Coefficients
+SRPNUM      = 9
+D0          = -100.0
 DC          = 0.0
 DS          = 0.0
 Y0          = 0.0
@@ -19,38 +46,12 @@ B0          = 0.0
 BC          = 0.0
 BS          = 0.0
 
+## SP3 File
+# 2006/07/19
+#IGSSP3LIST  = ../../ROCKET/workplace/sp3/igs13842.sp3 ../../ROCKET/workplace/sp3/igs13843.sp3 ../../ROCKET/workplace/sp3/igs13844.sp3
 
-# Sat PRN
-PRN         = 1
-
-# Initial time
-YEAR        = 2014
-MON         = 2
-DAY         = 1
-HOUR        = 0
-MIN         = 0
-SEC         = 0.0
-
-# EGM
-EGMDEG      = 12
-EGMORD      = 12
-EGMFILE     = ../../ROCKET/tables/egm08_200.txt
-
-# Solid Tide
-SOLIDTIDE   = TRUE
-
-# Ocean Tide
-OCEANTIDE   = TRUE
-EOTDEG      = 8
-EOTORD      = 8
-EOTFILE     = ../../ROCKET/tables/fes2004_Cnm-Snm.dat
-
-# Pole Tide
-POLETIDE    = TRUE
-
-# SP3 File
 # 2014/02/01
-IGSSP3LIST  = ../../ROCKET/workplace/sp3/igs17775.sp3 ../../ROCKET/workplace/sp3/igs17776.sp3 ../../ROCKET/workplace/sp3/igs17780.sp3
+#IGSSP3LIST  = ../../ROCKET/workplace/sp3/igs17775.sp3 ../../ROCKET/workplace/sp3/igs17776.sp3 ../../ROCKET/workplace/sp3/igs17780.sp3
 
 # 2014/02/04
 #IGSSP3LIST  = ../../ROCKET/workplace/sp3/igs17781.sp3 ../../ROCKET/workplace/sp3/igs17782.sp3 ../../ROCKET/workplace/sp3/igs17783.sp3
@@ -65,11 +66,58 @@ IGSSP3LIST  = ../../ROCKET/workplace/sp3/igs17775.sp3 ../../ROCKET/workplace/sp3
 #IGSSP3LIST  = ../../ROCKET/workplace/sp3/igs17793.sp3 ../../ROCKET/workplace/sp3/igs17794.sp3 ../../ROCKET/workplace/sp3/igs17795.sp3
 
 # 2015/01/01
-#IGSSP3LIST  = ../../ROCKET/workplace/sp3/igs18253.sp3 ../../ROCKET/workplace/sp3/igs18254.sp3 ../../ROCKET/workplace/sp3/igs18255.sp3
+IGSSP3LIST  = ../../ROCKET/workplace/sp3/igs18253.sp3 ../../ROCKET/workplace/sp3/igs18254.sp3 ../../ROCKET/workplace/sp3/igs18255.sp3
 
-# Integrator
-STEPSIZE    = 60.0
-LENGTH      = 24.0
+# 2016/01/01
+#IGSSP3LIST  = ../../ROCKET/workplace/sp3/igs18774.sp3 ../../ROCKET/workplace/sp3/igs18775.sp3 ../../ROCKET/workplace/sp3/igs18776.sp3
 
-# Debug
-DEBUG       = 0
+# 2016/10/14
+#IGSSP3LIST  = ../../ROCKET/workplace/sp3/igs19184.sp3 ../../ROCKET/workplace/sp3/igs19185.sp3 ../../ROCKET/workplace/sp3/igs19186.sp3
+
+### END OF DEFAULT SECTION ###
+
+
+[FORCEMODEL]
+
+## EGM
+EGMDEG      = 12
+EGMORD      = 12
+EGMFILE     = ../../ROCKET/tables/egm08_200.dat
+
+## Solid Tide
+SOLIDTIDE   = TRUE
+
+## Ocean Tide
+OCEANTIDE   = TRUE
+EOTDEG      = 8
+EOTORD      = 8
+EOTFILE     = ../../ROCKET/tables/fes2004_Cnm-Snm.dat
+
+## Pole Tide
+POLETIDE    = TRUE
+
+## Force Model Settings
+EnableEGM   = TRUE
+EnableThd   = TRUE
+EnableSRP   = TRUE
+EnableRel   = TRUE
+
+
+[INTEGRATOR]
+
+# unit: second
+STEPSIZE_RKF78  = 60.0
+STEPSIZE_ADAMS  = 300.0
+
+# unit: hour
+ARCLENGTH   = 24.0
+
+# unit: second
+ARCINTERVAL = 900.0
+
+
+[DEBUG]
+
+DEBUG       = 1
+
+# End of configuration file
