orbit integration and fit finished.

--- a/oldtests/CMakeLists.txt
+++ b/oldtests/CMakeLists.txt
@@ -3,11 +3,11 @@
 add_executable(test_egm test_egm.cpp)
 target_link_libraries(test_egm rocket)
 
-add_executable(test_egm2 test_egm2.cpp)
-target_link_libraries(test_egm2 rocket)
-
 add_executable(test_srp test_srp.cpp)
 target_link_libraries(test_srp rocket)
+
+add_executable(test_srp2 test_srp2.cpp)
+target_link_libraries(test_srp2 rocket)
 
 add_executable(test_sp3 test_sp3.cpp)
 target_link_libraries(test_sp3 rocket)
@@ -30,14 +30,20 @@ target_link_libraries(test_force2 rocket)
 add_executable(test_oi test_oi.cpp)
 target_link_libraries(test_oi rocket)
 
-add_executable(test_op test_op.cpp)
-target_link_libraries(test_op rocket)
+add_executable(test_oi2 test_oi2.cpp)
+target_link_libraries(test_oi2 rocket)
+
+add_executable(test_of test_of.cpp)
+target_link_libraries(test_of rocket)
 
 add_executable(test_jpl test_jpl.cpp)
 target_link_libraries(test_jpl rocket)
 
 add_executable(test_thirdbody test_thirdbody.cpp)
 target_link_libraries(test_thirdbody rocket)
+
+add_executable(test_thirdbody2 test_thirdbody2.cpp)
+target_link_libraries(test_thirdbody2 rocket)
 
 add_executable(test_legendre test_legendre.cpp)
 target_link_libraries(test_legendre rocket)
@@ -51,3 +57,5 @@ target_link_libraries(test_relativity rocket)
 add_executable(test_gds_serialize test_gds_serialize.cpp)
 target_link_libraries(test_gds_serialize rocket)
 
+add_executable(test_norm test_norm.cpp)
+target_link_libraries(test_norm rocket)
