--- a/oldtests/test.conf
+++ b/oldtests/test.conf
@@ -5,16 +5,16 @@
 
 ## Global Files
 IERSEOPFILE = ../../ROCKET/tables/finals2000A.all
-STKEOPFILE = ../../ROCKET/tables/eop19620101.txt
-IERSLSFILE  = ../../ROCKET/tables/Leap_Second_History.dat
+STKEOPFILE  = ../../ROCKET/tables/eop19620101.txt
+IERSLSFILE  = ../../ROCKET/tables/Leap_Second.dat
 JPLEPHFILE  = ../../ROCKET/tables/1980_2040.DE405
-SATDATAFILE = ../../ROCKET/tables/SatInfo.dat
+SATDATAFILE = ../../ROCKET/tables/Satellite_Information.dat
 
 ## Initial Time
-YEAR        = 2015
-MON         = 1
+YEAR        = 2014
+MON         = 2
 DAY         = 1
-HOUR        = 12
+HOUR        = 0
 MIN         = 0
 SEC         = 0.0
 TIMESYS     = GPS
@@ -24,19 +24,9 @@ SATPRN      = 1
 SATSYS      = G
 
 
-## Initial Position in ICRS, unit: m
-DRX0         = 0.0
-DRY0         = 0.0
-DRZ0         = 0.0
-
-## Initial Velocity in ICRS, unit: m/s
-DVX0         = 0.0
-DVY0         = 0.0
-DVZ0         = 0.0
-
 ## Initial SRP Coefficients
 SRPNUM      = 9
-D0          = -100.0
+D0          = 1.0
 DC          = 0.0
 DS          = 0.0
 Y0          = 0.0
@@ -47,31 +37,29 @@ BC          = 0.0
 BS          = 0.0
 
 ## SP3 File
-# 2006/07/19
-#IGSSP3LIST  = ../../ROCKET/workplace/sp3/igs13842.sp3 ../../ROCKET/workplace/sp3/igs13843.sp3 ../../ROCKET/workplace/sp3/igs13844.sp3
 
-# 2014/02/01
-#IGSSP3LIST  = ../../ROCKET/workplace/sp3/igs17775.sp3 ../../ROCKET/workplace/sp3/igs17776.sp3 ../../ROCKET/workplace/sp3/igs17780.sp3
+# 2014/01/31 - 2014/02/02
+IGSSP3LIST  = ../../ROCKET/workplace/sp3/igs17775.sp3 ../../ROCKET/workplace/sp3/igs17776.sp3 ../../ROCKET/workplace/sp3/igs17780.sp3
 
-# 2014/02/04
+# 2014/02/03 - 2014/02/05
 #IGSSP3LIST  = ../../ROCKET/workplace/sp3/igs17781.sp3 ../../ROCKET/workplace/sp3/igs17782.sp3 ../../ROCKET/workplace/sp3/igs17783.sp3
 
-# 2014/02/07
+# 2014/02/06 - 2014/02/08
 #IGSSP3LIST  = ../../ROCKET/workplace/sp3/igs17784.sp3 ../../ROCKET/workplace/sp3/igs17785.sp3 ../../ROCKET/workplace/sp3/igs17786.sp3
 
-# 2014/02/10
+# 2014/02/09 - 2014/02/11
 #IGSSP3LIST  = ../../ROCKET/workplace/sp3/igs17790.sp3 ../../ROCKET/workplace/sp3/igs17791.sp3 ../../ROCKET/workplace/sp3/igs17792.sp3
 
-# 2014/02/13
+# 2014/02/12 - 2014/02/14
 #IGSSP3LIST  = ../../ROCKET/workplace/sp3/igs17793.sp3 ../../ROCKET/workplace/sp3/igs17794.sp3 ../../ROCKET/workplace/sp3/igs17795.sp3
 
-# 2015/01/01
-IGSSP3LIST  = ../../ROCKET/workplace/sp3/igs18253.sp3 ../../ROCKET/workplace/sp3/igs18254.sp3 ../../ROCKET/workplace/sp3/igs18255.sp3
+# 2014/12/31 - 2015/01/02
+#IGSSP3LIST  = ../../ROCKET/workplace/sp3/igs18253.sp3 ../../ROCKET/workplace/sp3/igs18254.sp3 ../../ROCKET/workplace/sp3/igs18255.sp3
 
-# 2016/01/01
+# 2015/12/31 - 2016/01/02
 #IGSSP3LIST  = ../../ROCKET/workplace/sp3/igs18774.sp3 ../../ROCKET/workplace/sp3/igs18775.sp3 ../../ROCKET/workplace/sp3/igs18776.sp3
 
-# 2016/10/14
+# 2016/10/13 - 2016/10/15
 #IGSSP3LIST  = ../../ROCKET/workplace/sp3/igs19184.sp3 ../../ROCKET/workplace/sp3/igs19185.sp3 ../../ROCKET/workplace/sp3/igs19186.sp3
 
 ### END OF DEFAULT SECTION ###
@@ -82,7 +70,7 @@ IGSSP3LIST  = ../../ROCKET/workplace/sp3/igs18253.sp3 ../../ROCKET/workplace/sp3
 ## EGM
 EGMDEG      = 12
 EGMORD      = 12
-EGMFILE     = ../../ROCKET/tables/egm08_200.dat
+EGMFILE     = ../../ROCKET/tables/EGM2008_200.dat
 
 ## Solid Tide
 SOLIDTIDE   = TRUE
@@ -106,7 +94,7 @@ EnableRel   = TRUE
 [INTEGRATOR]
 
 # unit: second
-STEPSIZE_RKF78  = 60.0
+STEPSIZE_RKF78  =  60.0
 STEPSIZE_ADAMS  = 300.0
 
 # unit: hour
@@ -117,7 +105,6 @@ ARCINTERVAL = 900.0
 
 
 [DEBUG]
-
-DEBUG       = 1
+MODE        = 0
 
 # End of configuration file
