--- a/oldtests/test.conf
+++ b/oldtests/test.conf
@@ -3,43 +3,24 @@
 
 ### START OF DEFAULT SECTION ###
 
-## Global Files
 IERSEOPFILE = ../../ROCKET/tables/finals2000A.all
 STKEOPFILE  = ../../ROCKET/tables/eop19620101.txt
 IERSLSFILE  = ../../ROCKET/tables/Leap_Second.dat
 JPLEPHFILE  = ../../ROCKET/tables/1980_2040.DE405
 SATDATAFILE = ../../ROCKET/tables/Satellite_Information.dat
 
-## Initial Time
-YEAR        = 2014
-MON         = 2
-DAY         = 1
-HOUR        = 0
-MIN         = 0
-SEC         = 0.0
-TIMESYS     = GPS
 
-## Sat PRN and System
-SATPRN      = 1
-SATSYS      = G
+InitialTime = 2015 01 01 00 00 00.00 GPS
 
+SRPParamNum = 9
 
-## Initial SRP Coefficients
-SRPNUM      = 9
-D0          = 1.0
-DC          = 0.0
-DS          = 0.0
-Y0          = 0.0
-YC          = 0.0
-YS          = 0.0
-B0          = 0.0
-BC          = 0.0
-BS          = 0.0
+SATICSFILE  = ../../ROCKET/tables/Satellite_ICS.dat
+
 
 ## SP3 File
 
 # 2014/01/31 - 2014/02/02
-IGSSP3LIST  = ../../ROCKET/workplace/sp3/igs17775.sp3 ../../ROCKET/workplace/sp3/igs17776.sp3 ../../ROCKET/workplace/sp3/igs17780.sp3
+#IGSSP3LIST  = ../../ROCKET/workplace/sp3/igs17775.sp3 ../../ROCKET/workplace/sp3/igs17776.sp3 ../../ROCKET/workplace/sp3/igs17780.sp3
 
 # 2014/02/03 - 2014/02/05
 #IGSSP3LIST  = ../../ROCKET/workplace/sp3/igs17781.sp3 ../../ROCKET/workplace/sp3/igs17782.sp3 ../../ROCKET/workplace/sp3/igs17783.sp3
@@ -54,7 +35,7 @@ IGSSP3LIST  = ../../ROCKET/workplace/sp3/igs17775.sp3 ../../ROCKET/workplace/sp3
 #IGSSP3LIST  = ../../ROCKET/workplace/sp3/igs17793.sp3 ../../ROCKET/workplace/sp3/igs17794.sp3 ../../ROCKET/workplace/sp3/igs17795.sp3
 
 # 2014/12/31 - 2015/01/02
-#IGSSP3LIST  = ../../ROCKET/workplace/sp3/igs18253.sp3 ../../ROCKET/workplace/sp3/igs18254.sp3 ../../ROCKET/workplace/sp3/igs18255.sp3
+IGSSP3LIST  = ../../ROCKET/workplace/sp3/igs18253.sp3 ../../ROCKET/workplace/sp3/igs18254.sp3 ../../ROCKET/workplace/sp3/igs18255.sp3
 
 # 2015/12/31 - 2016/01/02
 #IGSSP3LIST  = ../../ROCKET/workplace/sp3/igs18774.sp3 ../../ROCKET/workplace/sp3/igs18775.sp3 ../../ROCKET/workplace/sp3/igs18776.sp3
